netsci reg info
netsci reg info

--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/06-NetSci-2019/ChildPages/2-NetSci-Registration/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/06-NetSci-2019/ChildPages/2-NetSci-Registration/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-09T15:33:40Z</date>
+						<date>2018-10-12T17:23:38Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -104,11 +104,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								lc4ZHeHsPSrX
-								SaLwdzSHCw==
+								0eWL/Lya1mAI
+								dPwaaEomUA==
 								</data>
 								<key>Size</key>
-								<integer>104212</integer>
+								<integer>112293</integer>
 							</dict>
 							<key>files/stacks_page_page54.js</key>
 							<dict>
@@ -124,11 +124,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								aOst9ECNG5mI
-								K6iJhyNmNQ==
+								auW17PFGN7wu
+								L11CxR1AcA==
 								</data>
 								<key>Size</key>
-								<integer>40577</integer>
+								<integer>47591</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
