--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/06-NetSci-2019/ChildPages/2-NetSci-Registration/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/06-NetSci-2019/ChildPages/2-NetSci-Registration/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-12T17:23:38Z</date>
+						<date>2018-10-12T17:41:31Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -124,11 +124,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								auW17PFGN7wu
-								L11CxR1AcA==
+								dWUK1CUqF++S
+								Wb8KHy8eyQ==
 								</data>
 								<key>Size</key>
-								<integer>47591</integer>
+								<integer>48009</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
