--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -3276,7 +3276,7 @@
 					<key>page35 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-10T14:33:11Z</date>
+						<date>2018-10-14T22:40:45Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -3695,11 +3695,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								n/HlrSxULpwb
-								zfuULInLMQ==
+								AtRrPTZG8DaU
+								yfg70+0kiw==
 								</data>
 								<key>Size</key>
-								<integer>150867</integer>
+								<integer>152431</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -5512,7 +5512,7 @@
 					<key>page48 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-10T14:33:11Z</date>
+						<date>2018-10-14T22:42:36Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -5991,21 +5991,21 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								lMnmxertazMf
-								ojxScqZi6Q==
+								ZPyin97XLzDL
+								7VyIWkU/2g==
 								</data>
 								<key>Size</key>
-								<integer>223156</integer>
+								<integer>223431</integer>
 							</dict>
 							<key>files/stacks_page_page48.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								/4s4TLpT5yLn
-								PmMtjJ/DBg==
+								F32V3j3jloOi
+								tb7267p02w==
 								</data>
 								<key>Size</key>
-								<integer>32523</integer>
+								<integer>32705</integer>
 							</dict>
 							<key>files/stacks_page_page48.php</key>
 							<dict>
@@ -6021,11 +6021,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Ia9qhJ7TtiBg
-								/lhLSYsQtQ==
+								Y2p3xYqQ4Anj
+								LVFUDbArNw==
 								</data>
 								<key>Size</key>
-								<integer>190738</integer>
+								<integer>193915</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -9682,7 +9682,7 @@
 					<key>rw:document:extrafiles - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-12T17:51:18Z</date>
+						<date>2018-10-14T22:42:36Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -9731,8 +9731,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								RcxzaTErKzJ2
-								TvVywNvqKA==
+								P6Z5L6Cj7BGS
+								teW/LGliNw==
 								</data>
 								<key>Size</key>
 								<integer>4512</integer>
@@ -9784,7 +9784,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-12T17:39:51Z</date>
+						<date>2018-10-14T22:42:36Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -10931,8 +10931,8 @@
 				LTk1RkItRDNEMjJDN0JDMUYxXxA0UERGIEZvciBQYXJ0
 				aWNpcGFudHMgU09TIFN5bXBvc2l1bSAyMDE4IHNjaGVk
 				dWxlLnBkZl8QJDdBNkY5RUNELUZDMjItNDg4NC1COTFF
-				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcC4i0wC
-				3P2AC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
+				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcC5/vCW
+				5SaAC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
 				YXRlokBCWE5TT2JqZWN00wkKC0RGSKFFgA2hR4AOgA9f
 				EC1zZnRwOi9jbXBseHN5cy53My51dm0uZWR1L3d3dy1y
 				b290L3RlbXBsYXRlcnkI0j4/TE1fEBNOU011dGFibGVE
@@ -10942,7 +10942,7 @@
 				FF8QJDJFOEM3RERDLUFFQjQtNDFGQi1CRkVELUU2QjhD
 				MEQ0N0M5M18QI1BGRCBmb3IgcGFydGljaXBhbnRzIEhX
 				QiBBZ2VuZGEucGRmXxAkNUY4MDY4RDUtMDQ4Mi00MTAy
-				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcC4i0wC4BGA
+				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcC5/vCW6I6A
 				C9MJCgtkZkihZYAXoUeADoAPXxAtc2Z0cDovY21wbHhz
 				eXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5
 				0j4/a2xcTlNNdXRhYmxlU2V0o2ttQlVOU1NldNMJCgtv
