--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/04-Symposium---Science-of-stories/ChildPages/1-Details/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/04-Symposium---Science-of-stories/ChildPages/1-Details/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-10T14:33:11Z</date>
+						<date>2018-10-14T22:42:36Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -512,21 +512,21 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								lMnmxertazMf
-								ojxScqZi6Q==
+								ZPyin97XLzDL
+								7VyIWkU/2g==
 								</data>
 								<key>Size</key>
-								<integer>223156</integer>
+								<integer>223431</integer>
 							</dict>
 							<key>files/stacks_page_page48.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								/4s4TLpT5yLn
-								PmMtjJ/DBg==
+								F32V3j3jloOi
+								tb7267p02w==
 								</data>
 								<key>Size</key>
-								<integer>32523</integer>
+								<integer>32705</integer>
 							</dict>
 							<key>files/stacks_page_page48.php</key>
 							<dict>
@@ -542,11 +542,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Ia9qhJ7TtiBg
-								/lhLSYsQtQ==
+								Y2p3xYqQ4Anj
+								LVFUDbArNw==
 								</data>
 								<key>Size</key>
-								<integer>190738</integer>
+								<integer>193915</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
