--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/04-Symposium---Science-of-stories/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/04-Symposium---Science-of-stories/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-10T14:33:11Z</date>
+						<date>2018-10-14T22:40:45Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -452,11 +452,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								n/HlrSxULpwb
-								zfuULInLMQ==
+								AtRrPTZG8DaU
+								yfg70+0kiw==
 								</data>
 								<key>Size</key>
-								<integer>150867</integer>
+								<integer>152431</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
