SOS reg button del
SOS reg button del

--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/04-Symposium---Science-of-stories/ChildPages/1-Details/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/04-Symposium---Science-of-stories/ChildPages/1-Details/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-14T22:42:36Z</date>
+						<date>2018-10-17T12:46:24Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -512,11 +512,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								ZPyin97XLzDL
-								7VyIWkU/2g==
+								4BpJyzMJME4U
+								lglr9kX/rg==
 								</data>
 								<key>Size</key>
-								<integer>223431</integer>
+								<integer>222599</integer>
 							</dict>
 							<key>files/stacks_page_page48.js</key>
 							<dict>
@@ -542,11 +542,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Y2p3xYqQ4Anj
-								LVFUDbArNw==
+								TWu0GM9oPgBl
+								9Vq5Qv65hg==
 								</data>
 								<key>Size</key>
-								<integer>193915</integer>
+								<integer>193293</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
