--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -3276,7 +3276,7 @@
 					<key>page35 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-14T22:40:45Z</date>
+						<date>2018-10-17T12:46:24Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -3675,11 +3675,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								0GSsjlbrL7eo
-								LGVBEdlXoQ==
+								3dQNywK0qHW7
+								Wp2v45JLew==
 								</data>
 								<key>Size</key>
-								<integer>206871</integer>
+								<integer>206039</integer>
 							</dict>
 							<key>files/stacks_page_page35.js</key>
 							<dict>
@@ -3695,11 +3695,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								AtRrPTZG8DaU
-								yfg70+0kiw==
+								VpzcxDOFqvhQ
+								L12ccwCKvg==
 								</data>
 								<key>Size</key>
-								<integer>152431</integer>
+								<integer>151809</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -5512,7 +5512,7 @@
 					<key>page48 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-14T22:42:36Z</date>
+						<date>2018-10-17T12:46:24Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -5991,11 +5991,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								ZPyin97XLzDL
-								7VyIWkU/2g==
+								4BpJyzMJME4U
+								lglr9kX/rg==
 								</data>
 								<key>Size</key>
-								<integer>223431</integer>
+								<integer>222599</integer>
 							</dict>
 							<key>files/stacks_page_page48.js</key>
 							<dict>
@@ -6021,11 +6021,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Y2p3xYqQ4Anj
-								LVFUDbArNw==
+								TWu0GM9oPgBl
+								9Vq5Qv65hg==
 								</data>
 								<key>Size</key>
-								<integer>193915</integer>
+								<integer>193293</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -9682,7 +9682,7 @@
 					<key>rw:document:extrafiles - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-14T22:42:36Z</date>
+						<date>2018-10-17T12:46:24Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -9731,11 +9731,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								P6Z5L6Cj7BGS
-								teW/LGliNw==
+								iajEs8Vgwz1l
+								apvdy9Ciqg==
 								</data>
 								<key>Size</key>
-								<integer>4512</integer>
+								<integer>4448</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -9784,7 +9784,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-14T22:42:36Z</date>
+						<date>2018-10-17T12:46:24Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -10823,11 +10823,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								X5yG48o2vcNf
-								6t1Vhwhq8Q==
+								6gwdfJ+57wLU
+								jrpgPtIeGA==
 								</data>
 								<key>Size</key>
-								<integer>4067</integer>
+								<integer>3401</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -10931,8 +10931,8 @@
 				LTk1RkItRDNEMjJDN0JDMUYxXxA0UERGIEZvciBQYXJ0
 				aWNpcGFudHMgU09TIFN5bXBvc2l1bSAyMDE4IHNjaGVk
 				dWxlLnBkZl8QJDdBNkY5RUNELUZDMjItNDg4NC1COTFF
-				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcC5/vCW
-				5SaAC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
+				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcC7s1JF
+				JnyAC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
 				YXRlokBCWE5TT2JqZWN00wkKC0RGSKFFgA2hR4AOgA9f
 				EC1zZnRwOi9jbXBseHN5cy53My51dm0uZWR1L3d3dy1y
 				b290L3RlbXBsYXRlcnkI0j4/TE1fEBNOU011dGFibGVE
@@ -10942,7 +10942,7 @@
 				FF8QJDJFOEM3RERDLUFFQjQtNDFGQi1CRkVELUU2QjhD
 				MEQ0N0M5M18QI1BGRCBmb3IgcGFydGljaXBhbnRzIEhX
 				QiBBZ2VuZGEucGRmXxAkNUY4MDY4RDUtMDQ4Mi00MTAy
-				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcC5/vCW6I6A
+				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcC7s1JFKgaA
 				C9MJCgtkZkihZYAXoUeADoAPXxAtc2Z0cDovY21wbHhz
 				eXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5
 				0j4/a2xcTlNNdXRhYmxlU2V0o2ttQlVOU1NldNMJCgtv
