--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/04-Symposium---Science-of-stories/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/04-Symposium---Science-of-stories/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-14T22:40:45Z</date>
+						<date>2018-10-17T12:46:24Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -432,11 +432,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								0GSsjlbrL7eo
-								LGVBEdlXoQ==
+								3dQNywK0qHW7
+								Wp2v45JLew==
 								</data>
 								<key>Size</key>
-								<integer>206871</integer>
+								<integer>206039</integer>
 							</dict>
 							<key>files/stacks_page_page35.js</key>
 							<dict>
@@ -452,11 +452,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								AtRrPTZG8DaU
-								yfg70+0kiw==
+								VpzcxDOFqvhQ
+								L12ccwCKvg==
 								</data>
 								<key>Size</key>
-								<integer>152431</integer>
+								<integer>151809</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
