--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -6716,21 +6716,11 @@
 					<key>page52 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-09T15:33:40Z</date>
+						<date>2018-10-18T14:26:56Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
 						<dict>
-							<key>files/backgroundImage_110517.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								/ytKW+d8532o
-								LG20qBSPRw==
-								</data>
-								<key>Size</key>
-								<integer>383766</integer>
-							</dict>
 							<key>files/small_p60311_n109623.png</key>
 							<dict>
 								<key>Digest</key>
@@ -6885,11 +6875,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								wMtt8Ci1C25P
-								rIEz31GgAw==
+								v0hpBVmGgnG2
+								5CzmeVpRvw==
 								</data>
 								<key>Size</key>
-								<integer>138938</integer>
+								<integer>142767</integer>
 							</dict>
 							<key>files/stacks_page_page52.js</key>
 							<dict>
@@ -6905,11 +6895,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								zCSBS7o7tAYW
-								3MvrgPJIjg==
+								Hc2HaVzz6UfJ
+								mKxeHgG5Ag==
 								</data>
 								<key>Size</key>
-								<integer>72519</integer>
+								<integer>75365</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -6922,21 +6912,11 @@
 					<key>page53 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-09T15:33:40Z</date>
+						<date>2018-10-18T14:26:56Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
 						<dict>
-							<key>files/backgroundImage_109967.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								/ytKW+d8532o
-								LG20qBSPRw==
-								</data>
-								<key>Size</key>
-								<integer>383766</integer>
-							</dict>
 							<key>files/small_p60311_n109623.png</key>
 							<dict>
 								<key>Digest</key>
@@ -7037,16 +7017,6 @@
 								<key>Size</key>
 								<integer>146527</integer>
 							</dict>
-							<key>files/stacks-image-843a067.jpg</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								gvLJWD1G+M0Z
-								v6+xt5Bueg==
-								</data>
-								<key>Size</key>
-								<integer>239632</integer>
-							</dict>
 							<key>files/stacks-image-90966db-250x250.png</key>
 							<dict>
 								<key>Digest</key>
@@ -7131,11 +7101,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								6zqbf02FQoEe
-								eFSTqhZuVQ==
+								aQ6aZOlnM6ou
+								9h8LzgBuuQ==
 								</data>
 								<key>Size</key>
-								<integer>151111</integer>
+								<integer>157154</integer>
 							</dict>
 							<key>files/stacks_page_page53.js</key>
 							<dict>
@@ -7151,11 +7121,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								eoOHMms5hrNo
-								rAw0XwTR+Q==
+								qEjNC/wc0Ev2
+								UE7I02Rn/w==
 								</data>
 								<key>Size</key>
-								<integer>86261</integer>
+								<integer>88760</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -7168,21 +7138,11 @@
 					<key>page54 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-12T17:41:31Z</date>
+						<date>2018-10-18T14:26:56Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
 						<dict>
-							<key>files/backgroundImage_110311.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								/ytKW+d8532o
-								LG20qBSPRw==
-								</data>
-								<key>Size</key>
-								<integer>383766</integer>
-							</dict>
 							<key>files/small_p60311_n109623.png</key>
 							<dict>
 								<key>Digest</key>
@@ -7237,11 +7197,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								0eWL/Lya1mAI
-								dPwaaEomUA==
+								tOFTa19m5doo
+								uS5JutMzZg==
 								</data>
 								<key>Size</key>
-								<integer>112293</integer>
+								<integer>112029</integer>
 							</dict>
 							<key>files/stacks_page_page54.js</key>
 							<dict>
@@ -7257,11 +7217,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								dWUK1CUqF++S
-								Wb8KHy8eyQ==
+								3dR/TrUnN+Og
+								QLGuo4oT4Q==
 								</data>
 								<key>Size</key>
-								<integer>48009</integer>
+								<integer>48657</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -10931,8 +10891,8 @@
 				LTk1RkItRDNEMjJDN0JDMUYxXxA0UERGIEZvciBQYXJ0
 				aWNpcGFudHMgU09TIFN5bXBvc2l1bSAyMDE4IHNjaGVk
 				dWxlLnBkZl8QJDdBNkY5RUNELUZDMjItNDg4NC1COTFF
-				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcC7s1JF
-				JnyAC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
+				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcC8Z9rE
+				7U6AC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
 				YXRlokBCWE5TT2JqZWN00wkKC0RGSKFFgA2hR4AOgA9f
 				EC1zZnRwOi9jbXBseHN5cy53My51dm0uZWR1L3d3dy1y
 				b290L3RlbXBsYXRlcnkI0j4/TE1fEBNOU011dGFibGVE
@@ -10942,7 +10902,7 @@
 				FF8QJDJFOEM3RERDLUFFQjQtNDFGQi1CRkVELUU2QjhD
 				MEQ0N0M5M18QI1BGRCBmb3IgcGFydGljaXBhbnRzIEhX
 				QiBBZ2VuZGEucGRmXxAkNUY4MDY4RDUtMDQ4Mi00MTAy
-				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcC7s1JFKgaA
+				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcC8Z9rE8FqA
 				C9MJCgtkZkihZYAXoUeADoAPXxAtc2Z0cDovY21wbHhz
 				eXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5
 				0j4/a2xcTlNNdXRhYmxlU2V0o2ttQlVOU1NldNMJCgtv
