--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/06-NetSci-2019/ChildPages/1-NetSci-Logistics/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/06-NetSci-2019/ChildPages/1-NetSci-Logistics/Contents.plist
@@ -35,21 +35,11 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-09T15:33:40Z</date>
+						<date>2018-10-18T14:26:56Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
 						<dict>
-							<key>files/backgroundImage_110517.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								/ytKW+d8532o
-								LG20qBSPRw==
-								</data>
-								<key>Size</key>
-								<integer>383766</integer>
-							</dict>
 							<key>files/small_p60311_n109623.png</key>
 							<dict>
 								<key>Digest</key>
@@ -204,11 +194,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								wMtt8Ci1C25P
-								rIEz31GgAw==
+								v0hpBVmGgnG2
+								5CzmeVpRvw==
 								</data>
 								<key>Size</key>
-								<integer>138938</integer>
+								<integer>142767</integer>
 							</dict>
 							<key>files/stacks_page_page52.js</key>
 							<dict>
@@ -224,11 +214,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								zCSBS7o7tAYW
-								3MvrgPJIjg==
+								Hc2HaVzz6UfJ
+								mKxeHgG5Ag==
 								</data>
 								<key>Size</key>
-								<integer>72519</integer>
+								<integer>75365</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
