--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/06-NetSci-2019/ChildPages/2-NetSci-Registration/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/06-NetSci-2019/ChildPages/2-NetSci-Registration/Contents.plist
@@ -35,21 +35,11 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-12T17:41:31Z</date>
+						<date>2018-10-18T14:26:56Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
 						<dict>
-							<key>files/backgroundImage_110311.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								/ytKW+d8532o
-								LG20qBSPRw==
-								</data>
-								<key>Size</key>
-								<integer>383766</integer>
-							</dict>
 							<key>files/small_p60311_n109623.png</key>
 							<dict>
 								<key>Digest</key>
@@ -104,11 +94,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								0eWL/Lya1mAI
-								dPwaaEomUA==
+								tOFTa19m5doo
+								uS5JutMzZg==
 								</data>
 								<key>Size</key>
-								<integer>112293</integer>
+								<integer>112029</integer>
 							</dict>
 							<key>files/stacks_page_page54.js</key>
 							<dict>
@@ -124,11 +114,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								dWUK1CUqF++S
-								Wb8KHy8eyQ==
+								3dR/TrUnN+Og
+								QLGuo4oT4Q==
 								</data>
 								<key>Size</key>
-								<integer>48009</integer>
+								<integer>48657</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
